[gd_scene load_steps=5 format=3 uid="uid://of741dha26oy"]

[ext_resource type="Theme" uid="uid://bb8skdiovc0jo" path="res://themes_fonts/spec_modifier_theme.tres" id="1_swmmm"]
[ext_resource type="Script" uid="uid://fl2xlriocnu7" path="res://scripts/species_modifier.gd" id="2_ft81a"]
[ext_resource type="Texture2D" uid="uid://dwslhh7ifia2c" path="res://assets/ui_pictures/minus.png" id="3_rfyhh"]
[ext_resource type="Texture2D" uid="uid://lcobp8lpp6m" path="res://assets/ui_pictures/plus.png" id="4_l8bp7"]

[node name="species_modifier" type="HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(1, 1)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -72.0
offset_right = -1838.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.1
theme = ExtResource("1_swmmm")
alignment = 1
script = ExtResource("2_ft81a")

[node name="species_name" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("1_swmmm")
text = "species_latin: xxxx"

[node name="label" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_swmmm")
bbcode_enabled = true
text = "stable"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="spacer" type="Control" parent="."]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="minus" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("1_swmmm")
icon = ExtResource("3_rfyhh")
clip_text = true

[node name="plus" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("1_swmmm")
icon = ExtResource("4_l8bp7")
clip_text = true

[connection signal="pressed" from="minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="plus" to="." method="_on_plus_pressed"]
